--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -47,9 +47,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbar">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" id="form" href="/">Form</a>
         {% if user.is_authenticated %}
-        <a class="nav-item nav-link" id="home" href="/chart">Chart</a>
+        <a class="nav-item nav-link" id="form" href="/">Form</a>
+        <a class="nav-item nav-link" id="edit" href="/edit">Edit</a>
+        <a class="nav-item nav-link" id="search" href="/search">Search</a>
         <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
         {% else %}
         <a class="nav-item nav-link" id="login" href="/login">Login</a>
