--- a/web/templates/signup.html
+++ b/web/templates/signup.html
@@ -24,6 +24,26 @@
             >
         </div>
         <div class="form-group">
+            <label for="firstname">First Name</label>
+            <input 
+                type="text"               
+                class="form-control"
+                name="firstname"
+                placeholder="Enter First Name"
+                required
+            >
+        </div>
+        <div class="form-group">
+            <label for="lastname">Last Name</label>
+            <input 
+                type="text"               
+                class="form-control"
+                name="lastname"
+                placeholder="Enter Last Name"
+                required
+            >
+        </div>
+        <div class="form-group">
             <label for="password">Authentication Key</label>
             <input 
                 type="password"
